# SeqSeg

./: .gitignore  .gitmodules  README.md  auto_centerline.py  cent2path.py  centpath.py  compute_metrics.py  environment.yml  environment_new_linux.yml  eval_dice_assuming_cent.py  job_cardiac_trace.sh  job_trace.sh  new_environment.yml  old_auto_centerline.py  parallel_auto_centerline.py  parallel_auto_centerline2.py  parallel_auto_centerline3.py  parallel_auto_centerline4.py  plot_functions.py  plot_scaling.py  plot_tracing_results.py  plot_training.py  predict.sh  prediction.py  pyproject.toml  seqseg.py  seqseg_plus.py  test_bryan.py  test_data_config.json  test_nnunet2.py  test_vtk.py  trace.sh  visualize_vtp.py  visualize_vtp_together.py
.github/workflows/: pytest.yml  python-app.yml  test.yml
analysis/: compute_metrics.py
config/: global.yaml  global_4_5.yaml  global_5.yaml  global_5_5.yaml  global_aorta.yaml  global_cereb.yaml  global_coro.yaml  global_debug.yaml  global_default.yaml  global_pulm.yaml  global_seg.yaml  global_test.yaml  test_data.json
docs/: algorithm.md  benchmarks.md  configuration.md  development.md  installation.md  usage.md
jobs/: job_sweep_trace_new_gpu_a5k.sh  job_trace.sh  job_trace_gpu.sh  job_trace_new_gpu.sh  job_trace_new_gpu_cereb.sh  job_trace_new_gpu_coro.sh
modules/: assembly.py  capping.py  centerline.py  datasets.py  evaluation.py  initialization.py  local_assembly.py  model.py  nnunet.py  params.py  prediction.py  sitk_functions.py  sweep.py  tracing.py  tracing_functions.py  vmr_data.py  vmtk_functions.py  vtk_functions.py
parallel/: old_auto_centerline.py  parallel_auto_centerline.py  parallel_auto_centerline2.py  parallel_auto_centerline3.py  parallel_auto_centerline4.py
plotting/: plot_functions.py  plot_training.py  results.py
seqseg/: __init__.py  api.py  citations.py  cli.py  config_models.py  seqseg.py  seqseg_plus.py
seqseg/analysis/: analyze_by_names.py  categories.json  compute_metrics.py  compute_metrics_meshes.py  compute_metrics_meshes_comparison.py  compute_metrics_meshes_pred_vs_pred.py  dataset_size_study.py  dice_per_radii.py  eval_dice_assuming_cent.py  plot_dice_per_radii.py  plot_dice_radii_from_raw.py  plot_metrics.py  plot_pred_vs_pred_metrics.py  plot_pred_vs_pred_reference.py  plot_volume_per_radii.py  plot_volume_radii_from_raw.py  post_process_results.py  predictions_names.json  volume_per_radii.py
seqseg/config/: __init__.py  aorta_tutorial.yaml  global.yaml  global_aorta.yaml  global_cereb.yaml  global_coro.yaml  global_debug.yaml  global_default.yaml  global_pulm.yaml  global_seg.yaml  global_test.yaml  seeds.json
seqseg/jobs/: job_cardiac_trace_gpu.sh  job_centerline_extraction.sh  job_seg_trace.sh  job_sweep_trace_new_gpu.sh  (+8 more)
tests/: test.sh  test_nnunet2.py  test_segmentation.py
toy_multiprocessing/: multitest_naive.py  multitest_stream.py
tutorial/: tutorial.md
(+76 files in other folders)
