[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seqseg"
version = "1.0.0"
description = "A deep learning-based medical image blood vessel tracking and segmentation tool."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Numi Sveinsson Cepero", email = "numi@berkeley.com"},
]
keywords = [
    "segmentation",
    "deep learning",
    "medical imaging",
    "nnunet",
    "medical image analysis",
    "medical image segmentation",
    "nnU-Net",
    "blood vessel segmentation",
    "vascular segmentation",
    "vascular tracking",
    "seqseg",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "vtk",
    "SimpleITK",
    "PyYAML",
    "nnunetv2",
]

[project.scripts]
seqseg = "seqseg.seqseg:main"

[project.urls]
homepage = "https://github.com/numisveinsson/SeqSeg"
repository = "https://github.com/numisveinsson/SeqSeg"

[tool.setuptools]
package-data = { "seqseg" = ["config/*.yaml"] }

[project.optional-dependencies]
dev = [
  "pytest",
  "some-other-dev-tools"
]